crates/oxc_react_compiler/tests/snapshots/inner-function__nullable-objects__return-object-of-functions.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/inner-function/nullable-objects/return-object-of-functions.js
---
import { c as _c } from "react/compiler-runtime";
/**
* Assume that only directly returned functions or JSX attributes are invoked.
* Conservatively estimate that functions wrapped in objects or other containers
* might never be called (and therefore their property loads are not hoistable).
*/
function useMakeCallback(t0) {
	const $ = _c(2);
	const { arr } = t0;
	let t1;
	if ($[0] !== arr) {
		t1 = {
			getElement0: () => arr[0].value,
			getElement1: () => arr[1].value
		};
		$[0] = arr;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useMakeCallback,
	params: [{ arr: [1, 2] }],
	sequentialRenders: [{ arr: [1, 2] }, { arr: [] }]
};
